Some updates that don't really help; trying to get JavaFX working from jar.